<resources>
    <string name="app_name" translatable="false">GreenTips</string>
    <string name="chooseLang">Choose a language</string>
    <string name="espanol" translatable="false">Español</string>
    <string name="svenska" translatable="false">Svenska</string>
    <string name="polsku" translatable="false">Polski</string>
    <string name="shqip" translatable="false">Shqip</string>
    <string name="english" translatable="false">English</string>
    <string name="francais" translatable="false">Français</string>
    <string name="continueButton">Continue</string>
    <string name="aboutButton">About</string>
    <string name="chooseCat">Choose a category</string>
    <string name="category">Category</string>
    <string name="aboutapp">
        <b>Welcome to GreenTips!</b>\n
        \nThis application was developed by 6 students at Chalmers Tekniska Högskola in Gothenburg, Sweden.\n
        \nWith the tips and ideas we give to you here, we will help you to reduce you environmental impact and live a healthier life!\n
        \nSimply choose the category you are interested in and we will supply many, simple ways for a greener life.
        \nReceive notifications for reminders by choosing to have a tip in focus!
    </string>
    <string name="transport">Transport</string>
    <string name="outdoors">Outdoors</string>
    <string name="worklife">Working life</string>
    <string name="household">Household</string>
    <string name="sociallife">Social life</string>
    <string name="sourcestext1">Sources:</string>
    <string name="txtCredits" translatable="false">
        \n\n https://info.esg.adec-innovations.com/blog/environmentally-friendly-practices-for-the-workplace
        \n\n https://info.esg.adec-innovations.com/blog/environmentally-friendly-practices-for-the-workplace
        \n\n https://www.goodenergy.co.uk/blog/2017/08/22/ultimate-guide-eco-friendly-living/?fbclid=IwAR1NP5ebRs-PlYXbFdD7kD2r9O0OSw0vr4xw6MxpVmKaxr8GQ-FucukQfN4
        \n\n https://backpackerspantry.com/blogs/news/7-tips-for-eco-friendly-outdoor-recreation
        \n\n https://biofriendlyplanet.com/green-ideas/eco-friendly/12-small-changes-to-make-your-home-more-eco-friendly/


    </string>
    <string name="chooseTip">Choose a tip</string>
    <string name="shorttransporttip1">Walk for short trips</string>
    <string name="shorttransporttip2">Opt for the bike</string>
    <string name="shorttransporttip3">Use public transport</string>
    <string name="shorttransporttip4">Plan before taking trips</string>
    <string name="shorttransporttip5">Switch to Green driving</string>
    <string name="shorttransporttip6">Take one car</string>
    <string name="shorttransporttip7">Save your money</string>
    <string name="transporttip1">
        \n\n<b>Walk for short trips</b>
        \n\nWalking helps reduce body fat, lower blood pressure and is free.
        It may also take less time than you think.

        \n\nStudies have shown that most people will underestimate time related to car
        journeys and overestimate the time it will take to walk.
        \n\nThe average walking pace is six kilometres per hour and
        if you walk you don’t need to find a car bay when you arrive.</string>
    <string name="transporttip2">
        \n\n<b>Opt for the bike</b>
        \n\nSwitching a 10km journey per week from your car to your bike will burn around 300 calories each way and can save
        over 300kg of greenhouse gas emissions each year.
        \n\nDid you know? Peak hour city trips up to 10km in length are generally faster by bike than any other form of transport,
        door to door.
        \n\nIn addition cycling helps reducing body fat, which is a first step to become healthier and stronger!</string>
    <string name="transporttip3">
        \n\n<b>Use public transport</b>
        \n\nUsing public transport allows you to skip the hassle of traffic and parking and still be on time!</string>
    <string name="transporttip4">
        \n\n<b>Plan before taking trips</b>
        \n\nCollect your errands in one trip to save fuel, money and time!
        \n\nIt will allow you to become more productive during the rest of the day.</string>
    <string name="transporttip5">
        \n\n<b>Switch to Green driving</b>
        \n\nDrive smoothly, starting and stopping uses more fuel.
        \n\nSlow down, driving at 90 km/h uses 25% less fuel than travelling at 110 km/h.
        \n\nRegularly check your tyre pressure. Under-inflated tyres can increase fuel consumption by 3%
        and take 10,000km off the tyres life.
        \n\nInstead of using the air conditioner open the window when driving under 70km/h.</string>
    <string name="transporttip6">
        \n\n<b>Take one car</b>
        \n\nInstead of taking several cars to make the same trip with your friends, take a single car whenever it is possible.
        \n\nYou will enjoy your trip
        even more and it allows you to switch seats with the driver to make your travel safer and more comfortable.
        \n\nYou can always opt for car-pooling if travelling alone to break the monotony of your daily commute.</string>
    <string name="transporttip7">
        \n\n<b>Save your money</b>
        \n\nHaving a car costs a lot nowadays, the fuel is pretty expensive and the congestion tax in Sweden becomes
        more expensive every year so think twice before buying your own car!</string>
    <string name="shorthouseholdtip1">Stop using disposable bags</string>
    <string name="shorthouseholdtip2">Use cold water when washing your clothes</string>
    <string name="shorthouseholdtip3">Make your own cleaning products</string>
    <string name="shorthouseholdtip4">Insulate your home</string>
    <string name="shorthouseholdtip5">Turn off lights when you leave the room</string>
    <string name="shorthouseholdtip6">Eat less meat</string>
    <string name="shorthouseholdtip7">Recycle everything</string>
       <string name="householdtip1">
           \n\n<b>Stop using disposable bags</b>

	    \n\nGet some reusable bags or make your own — they’re insanely easy to make.
    </string>
    <string name="householdtip2">
        \n\n<b>Use cold water when washing your clothes</b>
        \n\nAn estimated 75 to 90 percent of all the energy your washer uses goes to warming up the water,
        so switching to colder water can lower your gas or electric bill.
	    \n\nIn addition hot water will actually set stains, and cold water will get your clothes just as clean.
    </string>
    <string name="householdtip3">
        \n\n<b>Make your own cleaning products</b>
        \n\nReplace all your plastic chemical containers with a single one.
        \n\n*Window cleaner: 1/4 cup of white vinegar, 2 cups of warm water and tea tree oil
        \n\n*Anti-bacterial cleaner: 1/4 cup of white vinegar, 1 tbsp of baking soda, 1 litre of hot water and orange essential oils
    </string>
    <string name="householdtip4">
        \n\n<b>Insulate your home</b>
	    \n\nHomes that aren\'t well insulated are much harder to keep warm when it\'s cold, and cool when the weather is hot.
    </string>
    <string name="householdtip5">
        \n\n<b>Turn off lights when you leave the room</b>
        \n\nThis is surely one of the most know tips you can hear from anyone.
        Turning the lights off when you\'re not using them can help save money by reducing your electricity bills and extend the
        life of your light bulbs.
        \n\nDoing so can make your home more energy-efficient.
    </string>
    <string name="householdtip6">
        \n\n<b>Eat less meat</b>
	    \n\nNot having red meat, even if it’s just for two or three days a week - can have quite a significant impact on reducing your carbon footprint.
</string>
    <string name="householdtip7">
        \n\n<b>Recycle everything</b>
	    \n\nYou can recycle almost everything, from batteries to paper to cars. Before you throw it away, take a minute to find out if you could recycle it instead.
</string>
    <string name="shortworklifetip1">Recycle!</string>
    <string name="shortworklifetip2">Go paperless!</string>
    <string name="shortworklifetip3">Green cleansing</string>
    <string name="shortworklifetip4">No more water bottles</string>
    <string name="shortworklifetip5">Plan you work day</string>
    <string name="shortworklifetip6">Use public transport</string>
    <string name="shortworklifetip7">Have green decoration</string>
    <string name="worklifetip1">
        \n\n<b>Recycle!</b>

        \n\nA lot of employees don\'t care about recycling, but it does matter recycling during your work. You can recycle
        paper, plastic and food for example.
</string>
    <string name="worklifetip2">
        \n\n<b>Go paperless!</b>

        \n\nSwitch to digital documents instead of paper, and think over of buying 100€ recycled paper.
</string>
    <string name="worklifetip3">
        \n\n<b>Green cleansing</b>

        \n\nMany cleansing products are environmentally unfriendly and are dangerous for the environment as well as human health.
        \n\nPrioritize buying eco friendly hand soap and sprays that don\'t have harmful and other bad chemicals.
</string>
    <string name="worklifetip4">
        \n\n<b>No more water bottles</b>

        \n\nYou can easily drink water from your own glass, or if you decide to purchase a reusable water bottle.
</string>
    <string name="worklifetip5">
        \n\n<b>Plan you work day</b>

        \n\nPrepare your meals and snacks the day before you work, so you don\'t need to drive to buy food or
        other stuff.
</string>
    <string name="worklifetip6">
        \n\n<b>Use public transport</b>

        \n\nThe best solution to reduce emissions is to use public transport, and if it\'s not possible then
        take your bike and cycle to work.
</string>
    <string name="worklifetip7">
        \n\n<b>Have green decoration</b>

        \n\nUpgrade your office by decorating it with plants.
        \n\nThe plants gives you oxygen and remove the carbon dioxide. That helps you to get healthier air
        in your office and add a beautiful design.
</string>
    <string name="shortsocialtip1">Buy Eco friendly clothes</string>
    <string name="shortsocialtip2">Be more vegan outside</string>
    <string name="shortsocialtip3">Buy vintage</string>
    <string name="shortsocialtip4">Eat locally produced food</string>
    <string name="shortsocialtip5">Save water</string>
    <string name="shortsocialtip6">Say no to plastic straw</string>
    <string name="shortsocialtip7">Use containers</string>
    <string name="socialtip1">
        \n\n<b>Buy Eco friendly clothes</b>

        \n\nAsk the store if their clothes are made eco friendly.

    </string>
    <string name="socialtip2">
        \n\n<b>Be more vegan outside</b>

        \n\nBe vegan whenever you can. When you eat in restaurants,
        don\'t waste food, try to eat less meat, and eat ecologist food.

    </string>
    <string name="socialtip3">

        \n\n<b>Buy vintage</b>

    \n\nSupport second hand, buy vintage clothes and used furniture instead of new.

    </string>
    <string name="socialtip4">
        \n\n<b>Eat locally produced food</b>

        \n\nEat Swedish food. Imported food contributes to environmental degradation.

    </string>
    <string name="socialtip5">
        \n\n<b>Save water</b>

        \n\nTry to save as much water as possible in your daily routine.
        \n\nDrink crane water instead of bottled one,
        and if you don\'t have access to clean crane water try to buy a filter which will make it clean.
        It will also save you a lot of money.

    </string>
    <string name="press_a_card_for_more_information">Press a card for more information</string>
</resources>