<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/greenback"
    tools:context=".householdTips">

    <include layout = "@layout/base_activity" />

    <TextView
        android:id="@+id/textHousehold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="136dp"
        android:enabled="false"
        android:text="@string/household"
        android:textColor="#145317"
        android:textAlignment="center"
        android:textSize="40sp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:text="@string/press_a_card_for_more_information"
        android:textAlignment="center"
        android:textColor="#145317"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHousehold" />

    <ScrollView
        android:id="@+id/scrollViewHousehold"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginTop="250dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/scrollLayoutHousehold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="370dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/householdtip1"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:alpha="0.7"
                android:background="@drawable/rounded_tip_corner"
                android:textAllCaps="false"
                android:text="@string/shorthouseholdtip1"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/householdtip2"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:alpha="0.8"
                android:textAllCaps="false"
                android:background="@drawable/rounded_tip_corner"
                android:text="@string/shorthouseholdtip2"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/householdtip3"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:alpha="0.8"
                android:textAllCaps="false"
                android:background="@drawable/rounded_tip_corner"
                android:text="@string/shorthouseholdtip3"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/householdtip4"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:alpha="0.8"
                android:textAllCaps="false"
                android:background="@drawable/rounded_tip_corner"
                android:text="@string/shorthouseholdtip4"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/householdtip5"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:alpha="0.8"
                android:textAllCaps="false"
                android:background="@drawable/rounded_tip_corner"
                android:text="@string/shorthouseholdtip5"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/householdtip6"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:alpha="0.8"
                android:textAllCaps="false"
                android:background="@drawable/rounded_tip_corner"
                android:text="@string/shorthouseholdtip6"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/householdtip7"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp"
                android:alpha="0.8"
                android:textAllCaps="false"
                android:background="@drawable/rounded_tip_corner"
                android:text="@string/shorthouseholdtip7"
                android:textSize="16sp"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/homebutton"
        android:alpha="0.8"
        android:background="@drawable/homebutton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:onClick="returnHome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="5dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>